--- a/app/views/register/business-sector.html
+++ b/app/views/register/business-sector.html
@@ -46,7 +46,7 @@
 <style type="text/css">
 .column-one-half {margin-left:auto; width: 50%}
 h2.heading-large{margin-top: 15px}
-ul#sectors {margin-top: 30px}
+ul#sectors {margin-top: 30px; width: 75%}
 ul#sectors li {border-top:1px solid #bfc1c3;padding:15px 30px 43px 10px;}
 </style>
 
