--- a/app/views/register/check-your-answers.html
+++ b/app/views/register/check-your-answers.html
@@ -221,10 +221,10 @@
         </div>
       </dl>
 
-      <h2 class="heading-medium">Now send your application</h2>
+      <h2 class="heading-medium">Booking your event</h2>
 
       <p class="text">
-        By submitting this notification you are confirming that, to the best of your knowledge, the details you are providing are correct.
+        By continuing you accept that the information provided may be shared with DIT trade advisers who might contact you in regards your export needs. 
       </p>
 
       <div class="form-group">
