--- a/app/views/register/ticket-details.html
+++ b/app/views/register/ticket-details.html
@@ -24,7 +24,7 @@
 	  </div>
 
 	<h2 class="heading-medium" style="margin-top:0">
-		  Ticket 1
+		  Attendee 1 details
       </h2>
 	  <form action="/create-event/question-onwards" method="get" class="form">
 
@@ -174,7 +174,7 @@
 		  </fieldset>
 
 		<div class="form-group">
-			<a class="link" href="#">Add another ticket</a><br />
+			<a class="link" href="#">Add another attendee</a><br />
 		</div>
 
 
