--- a/app/views/register/contact-preferences.html
+++ b/app/views/register/contact-preferences.html
@@ -86,7 +86,7 @@
 			      </legend>
 			      <div class="multiple-choice">
 			        <input id="waste-type-1" name="waste-types" type="checkbox" value="waste-animal">
-			        <label for="waste-type-1">I am happy for DIT (Both in the UK and Overseas) to keep me informed of DIT activity through EmailI</label>
+			        <label for="waste-type-1">DIT (Both in the UK and Overseas) can keep me informed of DIT activity through email</label>
 			      </div>
 			      <div class="multiple-choice">
 			        <input id="waste-type-3" name="waste-types" type="checkbox" value="waste-farm-agricultural">
