updates to external journey based on Joe's feedback

--- a/app/views/includes/basket.html
+++ b/app/views/includes/basket.html
@@ -1,11 +1,15 @@
 <div class="panel panel--info ">
     	<p>You're booking tickets for</p>
-    	<h4 class="heading-small">Astana 2017</h4>
+    	<h4 class="heading-small">Intellectual Property Know-How for Small Businesses</h4>
     	<ul>
-    		<li>London</li>
+    		<div class="bold-xsmall" style="margin-top:15px">Date and time</div>
     		<li>11 May 2017</li>
-    		<li>11:00 to 17:00</li>
+    		<li>11:00 to 17:00 <br /><br /></li>
+    		<div class="bold-xsmall">Location</div>
+    		<li>The Bristol Golf Club <br />
+			Almondsbury<br />
+			</li>
     	</ul>
     	<br>
-		<p>The event is free</p>
+		<p>Free</p>
 </div>
