--- a/app/views/register/additional-questions.html
+++ b/app/views/register/additional-questions.html
@@ -12,7 +12,7 @@
 
 <main id="content" role="main">
 <h1 class="heading-large">
-		  Additional questions
+		  Registration questions
       </h1>
   <div class="grid-row">
     <div class="column-two-thirds">
