--- a/app/views/register/check-your-answers.html
+++ b/app/views/register/check-your-answers.html
@@ -18,7 +18,7 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Check your answers before booking the event
+        Registration summary
       </h1>
 
 
@@ -158,11 +158,11 @@
 
 <!-- TICKET DETAILS -->
         <h2 class="heading-medium">
-        Tickets
+        Attendee details
       </h2>
-       <h2 class="heading-small">
+     <!--  <h2 class="heading-small">
         Ticket 1
-      </h2>
+      </h2> -->
       <dl class="govuk-check-your-answers cya-questions-short">
         <div>
           <dt class="cya-question">
@@ -212,6 +212,7 @@
           </dt>
           <dd class="cya-answer">
             07700 900457<br />
+            Yes to text reminders on this number
           </dd>
           <dd class="cya-change">
             <a href="#">
