updates to business address

--- a/app/views/register/business-address.html
+++ b/app/views/register/business-address.html
@@ -27,7 +27,7 @@
 	  <form action="" method="get" class="form">
 	    <div class="multiple-choice" data-target="country-selection" onclick="checkLabel()">
         <input id="example-contact-by-email" type="checkbox" name="radio-contact-group" value="Yes">
-        <label for="example-contact-by-email">This business is not based in the UK</label>
+   <!--     <label for="example-contact-by-email">This business is not based in the UK</label> -->
       </div>
 	
 			  <fieldset class="form-group {% if 0 < session.previousQuestions.length  and
