--- a/app/views/includes/great-header.html
+++ b/app/views/includes/great-header.html
@@ -44,6 +44,7 @@ a {
 main#content {max-width: 1200px}
 .breadcrumbs, #global-cookie-message {display: none}
 
+.navigation {margin-bottom: -3px}
 </style>
 
 <div class="navigation">
