--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -2,6 +2,7 @@
 
 {% block head %}
   {% include "includes/head.html" %}
+  {% block extrastyle %} {% endblock %}
 {% endblock %}
 
 {% block cookie_message %}
