updated image page

--- a/app/views/create-event/images.html
+++ b/app/views/create-event/images.html
@@ -8,8 +8,10 @@
 {% block content %}
 
 <main id="content" role="main">
+
   <div class="grid-row">
-    <div class="full-grid-mode" style="margin-left:15px">
+
+    <div class="column-two-thirds">
 
 
 	  <!--  BREADCRUMB  -->
@@ -82,7 +84,12 @@
 						</p>
 					</div>
 
+
+
 				  </div>
+
+
+
 			  </div>
 
 
@@ -154,6 +161,25 @@
 	  </form>
 
     </div>
+
+	  <div class="column-third add-title-margin" style="margin-top:120px;">
+		  <aside class="govuk-related-items" data-module="track-click" role="complementary">
+			  <p class="heading-small" style="margin-top:5px; margin-bottom:15px;">
+				  Image guidance
+			  </p>
+
+			  <p>
+				  Resolution and file type
+			  </p>
+
+			  <p>
+				  Guidance on branding and link to DIT image library
+			  </p>
+		  </aside>
+
+	  </div>
+
+
   </div>
 </main>
 
