--- a/app/views/create-event/images.html
+++ b/app/views/create-event/images.html
@@ -47,8 +47,7 @@
 	  <h1 class="heading-large" style="margin-top:15px">
         Images and logos
       </h1>
-
-
+		
 
 
 		  <!-- MAIN IMAGE LOGO -->
@@ -162,18 +161,32 @@
 
     </div>
 
-	  <div class="column-third add-title-margin" style="margin-top:120px;">
+    <div class="column-third add-title-margin" style="margin-top:120px;">
 		  <aside class="govuk-related-items" data-module="track-click" role="complementary">
 			  <p class="heading-small" style="margin-top:5px; margin-bottom:15px;">
 				  Image guidance
 			  </p>
 
-			  <p>
-				  Resolution and file type
+			  <p>  <!-- note these are made up -->
+				  Required image resolution:<br>1000px by 300px
+			  </p>
+
+			  <p>  <!-- note these are made up -->
+				  File types accepted:<br>JPEG and PNG
 			  </p>
 
 			  <p>
-				  Guidance on branding and link to DIT image library
+				  You may find the GREAT brand website [hyperlink text] useful. It includes:
+			  </p>
+
+			  <ul class="list list-bullet">
+				  <li>an image library containing fully licensed stock photography</li>
+				  <li>official DIT and GREAT brand assets, including logos</li>
+				  <li>full brand guidelines and supporting documentation</li>
+			  </ul>
+
+			  <p>
+				  If you decide to independently source your own webpage photography or assets, make sure that you have relevant permissions to use them and that they adhere to brand guidelines.
 			  </p>
 		  </aside>
 
