--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -344,7 +344,7 @@
 						  Question 1<br><br>
 						  Answers
 					  </dt>
-					  <dd class="cya-answer" style="white-space: pre-wrap; vertical-align:top">{{ session.questionsData[0][0] }}<br><br>{{ session.questionsData[0][2] }}</dd>
+					  <dd class="cya-answer" style="white-space: pre-wrap; vertical-align:top">{{ session.questionsData[0][0] }}<br><br>{{ session.questionsData[0][2] }}<br>{{ session.questionsData[0][3] }}</dd>
 					  <dd class="cya-change">
 						  <a href="#">
 							  Change<span class="visually-hidden"> contact details</span>
@@ -359,7 +359,7 @@
 					  Question 2<br><br>
 					  Answers
 				  </dt>
-				  <dd class="cya-answer" style="white-space: pre-wrap; vertical-align:top">{{ session.questionsData[1][0] }}<br><br>{{ session.questionsData[1][2] }}</dd>
+				  <dd class="cya-answer" style="white-space: pre-wrap; vertical-align:top">{{ session.questionsData[1][0] }}<br><br>{{ session.questionsData[1][2] }}<br>{{ session.questionsData[1][3] }}</dd>
 				  <dd class="cya-change">
 					  <a href="#">
 						  Change<span class="visually-hidden"> contact details</span>
@@ -374,7 +374,7 @@
 					  Question 3<br><br>
 					  Answers
 				  </dt>
-				  <dd class="cya-answer"   style="white-space: pre-wrap;">{{ session.questionsData[2][0] }}<br><br>{{ session.questionsData[2][2] }}</dd>
+				  <dd class="cya-answer"   style="white-space: pre-wrap;">{{ session.questionsData[2][0] }}<br><br>{{ session.questionsData[2][2] }}<br>{{ session.questionsData[2][3] }}</dd>
 				  <dd class="cya-change">
 					  <a href="#">
 						  Change<span class="visually-hidden"> contact details</span>
@@ -389,7 +389,7 @@
 					  Question 4<br><br>
 					  Answers
 				  </dt>
-				  <dd class="cya-answer"   style="white-space: pre-wrap;">{{ session.questionsData[3][0] }}<br><br>{{ session.questionsData[3][2] }}</dd>
+				  <dd class="cya-answer"   style="white-space: pre-wrap;">{{ session.questionsData[3][0] }}<br><br>{{ session.questionsData[3][2] }}<br>{{ session.questionsData[3][3] }}</dd>
 				  <dd class="cya-change">
 					  <a href="#">
 						  Change<span class="visually-hidden"> contact details</span>
@@ -404,7 +404,7 @@
 					  Question 5<br><br>
 					  Answers
 				  </dt>
-				  <dd class="cya-answer"   style="white-space: pre-wrap;">{{ session.questionsData[4][0] }}<br><br>{{ session.questionsData[4][2] }}</dd>
+				  <dd class="cya-answer"   style="white-space: pre-wrap;">{{ session.questionsData[4][0] }}<br><br>{{ session.questionsData[4][2] }}<br>{{ session.questionsData[4][3] }}</dd>
 				  <dd class="cya-change">
 					  <a href="#">
 						  Change<span class="visually-hidden"> contact details</span>
