--- a/app/views/includes/live-events.html
+++ b/app/views/includes/live-events.html
@@ -46,7 +46,7 @@
     <tr>
 
       <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 12px; ">
-        <a href="/monitor/live-present">Monitor and track</a>  &nbsp; &nbsp; &nbsp;
+        <a href="/monitor-event/{{itemRow}}/true">Monitor and track</a>  &nbsp; &nbsp; &nbsp;
         <a href="/preview-data/{{itemRow}}/true">View web page</a></td>
 
       <td valign="top" style=" border: 0px; padding-right: 0px; padding-top: 2px; padding-bottom: 12px;">
